--- a/build.gradle
+++ b/build.gradle
@@ -19,4 +19,7 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.jdom/jdom2
     compile group: 'org.jdom', name: 'jdom2', version: '+'
+
+    // https://mvnrepository.com/artifact/redis.clients/jedis
+    compile group: 'redis.clients', name: 'jedis', version: '+'
 }
