--- a/build.gradle
+++ b/build.gradle
@@ -22,4 +22,7 @@ dependencies {
 
     // https://mvnrepository.com/artifact/redis.clients/jedis
     compile group: 'redis.clients', name: 'jedis', version: '+'
+
+    // https://mvnrepository.com/artifact/org.snmp4j/snmp4j
+    compile group: 'org.snmp4j', name: 'snmp4j', version: '+'
 }
