--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,13 @@ sourceCompatibility = '9'
 targetCompatibility = '9'
 
 repositories {
-    mavenCentral()
+
+    maven {
+        url "http://repo1.maven.org/maven2/"
+    }
+    jcenter {
+        url "http://jcenter.bintray.com/"
+    }
 }
 
 dependencies {
