--- a/db.config.json
+++ b/db.config.json
@@ -1,1 +1,1 @@
-{"host":"127.0.0.1","port":6379,"timeout":1000,"pass":"","db":0}
+{"host":"127.0.0.1","port":27017,"user":"","pass":"","db":"smartHome"}
