--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,8 @@ dependencies {
 
 compileJava {
     
-    options.compilerArgs += ["--add-modules java.net.http"]
+    options.forkOptions.jvmArgs << "--add-modules java.net.http"
+    //options.compilerArgs += ["--add-modules java.net.http"]
 }
 
 task fatJar(type: Jar) {
